@@ -123,6 +123,8 @@ public:
 
 	void AddVertex(const BSDF &bsdf, const BSDFEvent event, const float glossinessThreshold);
 
+	bool IsCausticPath(const BSDFEvent event, const float glossiness, const float glossinessThreshold) const;
+
 	luxrays::Point lensPoint;
 };
 
