@@ -121,7 +121,8 @@ void PathOCLNativeRenderThread::RenderThreadImpl() {
 		props <<
 			Property("sampler.type")("METROPOLIS") <<
 			// Disable image plane meaning for samples 0 and 1
-			Property("sampler.imagesamples.enable")(false);
+			Property("sampler.imagesamples.enable")(false) <<
+			Property("sampler.metropolis.addonlycaustics")(true);
 
 		lightSampler = Sampler::FromProperties(props, rndGen, film, engine->lightSampleSplatter,
 				engine->lightSamplerSharedData);
