@@ -40,6 +40,7 @@
 * Fixed text export of brick texture HERRINGBONE and BASKET
 * Fixed scale problem in GPU code for brick texture HERRINGBONE and BASKET (issue #438)
 * Fixed a possible crash when using trilinear texture with GPUs
+* Reworked some condition in hybrid rendering light tracing to solve the problem of flashing caustics (issue #441)
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
